# folder-sync

./: .gitignore  .pre-commit-config.yaml  README.md  empty_label_cache.py  label_cache.json  manual_trigger_backend.py  pyproject.toml  requirements.txt
backend/: __init__.py  __main__.py  main.py
backend/entry_points/: _pipeline.py
backend/objects/: __init__.py  constants.py  main_modules.py  objects.py
folder_sync/: __init__.py  __main__.py
folder_sync/entry_points/: __init__.py  _pipeline.py
folder_sync/objects/: __init__.py
gui/: button_actions.py  constants.py  gui.py  label_cache.json  objects.py  utils.py
src/: main.py
src/folder_sync/: __main__.py
src/folder_sync/cli/: __init__.py  _pipeline.py  _sync.py
src/folder_sync/entry_points/: _pipeline.py
src/folder_sync/exceptions/: __init__.py  _exceptions.py
src/folder_sync/objects/: __init__.py  _objects.py  objects.py
src/objects/: main_modules.py  objects.py
tests/: conftest.py  test_e2e.py  test_integration.py  test_unit.py
