[tool.poetry]
name = "folder-sync"
version = "0.1.0"
description = "Track differences between 2 folder and create a backup."
authors = ["Llorenç Buil Fustagueras"]
readme = "README.md"

[tool.poetry.scripts]
folder-sync = "folder_sync.__main__:_main"

[tool.poetry.dependencies]
python = "^3.11.6"
customtkinter = "^5.2.1"
pre-commit = "^3.6.0"
pillow = "^10.1.0"
pytest = "^7.4.3"
ruff = "^0.1.8"
click = "^8.1.7"
loguru = "^0.7.2"

[tool.ruff]
line-length = 100
lint.select = [
    "F", "E", "W", "ARG", "C90", "I", "N", "D", "UP", "YTT", "ANN", "S", "BLE", "FBT", "B", "A",
    "COM", "C40", "DTZ", "T10", "DJ", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT",
    "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY",
    "NPY", "RUF"
]
lint.ignore = [
    "PD901", "ANN002", "ANN003", "TRY002", "TRY003", "BLE001", "PLR0913", "S101", "ANN401", "D205",
    "D402"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
