[project]
name = "folder-sync"
version = "0.1.0"
description = "Track differences between 2 folder and create a backup."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "customtkinter>=5.2.1",
    "pre-commit>=3.6.0",
    "pillow>=10.1.0",
    "pytest>=7.4.3",
    "ruff>=0.1.8",
    "click>=8.1.7",
    "loguru>=0.7.2",
]


[project.scripts]
folder-sync = "folder_sync.__main__:_main"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
lint.select = ["ALL"]
lint.ignore = [
    "ANN002", "ANN003", "ANN401", "COM812", "D203", "D205", "D213", "D402", "EXE002", "FA102",
    "ISC001", "PD901", "PGH003", "PLR0913", "S101", "TRY003"
]

[tool.ruff.lint.pydocstyle]
convention = "google"
